# hivpy

./: .gitignore  LICENSE.txt  README.md  hivpy.conf  hivpy.example.conf  hivpy.example.env  hivpy.yaml  hivpy_intervention.yaml  logging_tutorial.rst  make_plot.py  setup.cfg
.github/workflows/: static.yaml  tests.yaml
data/: sex_behaviour.yaml
docs/: conf.py  hivpy.rst  index.rst  modules.rst
src/: experiment.py  population.py  simulation.py
src/docs/: conf.py  hivpy.cli.rst  hivpy.column_names.rst  hivpy.common.rst  hivpy.config.rst  hivpy.data.rst  hivpy.demographics.rst  hivpy.demographics_data.rst  hivpy.exceptions.rst  hivpy.experiment.rst  hivpy.hiv_status.rst  hivpy.population.rst  hivpy.rst  hivpy.sex_behaviour_data.rst  hivpy.sexual_behaviour.rst  hivpy.simulation.rst  index.rst  modules.rst
src/hivpy/: __init__.py  circumcision.py  circumcision_data.py  cli.py  column_names.py  common.py  config.py  core.py  data_reader.py  demographics.py  demographics_data.py  exceptions.py  experiment.py  hiv_diagnosis.py  hiv_diagnosis_data.py  hiv_status.py  hiv_testing.py  hiv_testing_data.py  logging.py  output.py  population.py  post_processing.py  pregnancy.py  pregnancy_data.py  prep.py  prep_data.py  running_model.py  sex_behaviour_data.py  sexual_behaviour.py  simulation.py
src/hivpy/data/: circumcision.yaml  demographics.yaml  hiv_diagnosis.yaml  hiv_testing.yaml  pregnancy.yaml  prep.yaml  sex_behaviour.yaml
src/tests/: test_circumcision.py  test_demographics.py  test_demographics_data.py  test_experiment.py  test_hiv_diagnosis.py  test_hiv_status.py  test_hiv_testing.py  test_logging.py  test_output.py  test_population.py  test_pregnancy.py  test_prep.py  test_random.py  test_selector.py  test_sex_behaviour_data.py  test_sexual_behaviour.py  test_simulation.py
src/tests/fixtures/: sample.conf  sample.yaml
src/tests/test_data/: demographics_testing.yaml  sbd_testing.yaml
tutorials/: circumcision.md  general.md  hiv_diagnosis.md  hiv_testing.md  intervention.md  introduction_to_development.md  post_processing.md  pregnancy.md  prep.md  setup.md  sexual_behaviour.md
