[metadata]
name = hivpy
description = HIV modelling software for Python
long_description = file: README.md
platform = any
version = 0.0.0
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GPL-3.0
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    pandas

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
tests =
    pytest
