[metadata]
name = hivpy
description = HIV modelling software for Python
long_description = file: README.md
platform = any
version = 0.0.1
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GPL-3.0
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pandas
    numpy
    scipy
    pyyaml

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
# Package the YAML files with default model parameters
hivpy.data = *.yaml

[options.extras_require]
tests =
    pytest
    flake8
    isort

[options.entry_points]
console_scripts =
    run_model = hivpy.cli:run_model
    register_parameters = hivpy.cli:register_parameters

[flake8]
max-line-length = 100
per-file-ignores =
    # Don't complain about unused imports in __init__.py
    */__init__.py: F401
