[metadata]
name = hivpy
description = HIV modelling software for Python
long_description = file: README.md
platform = any
version = 0.0.1
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GPL-3.0
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pandas<1.4
    numpy<2.0.0
    scipy
    pyyaml
    matplotlib
    titlecase
    sas7bdat

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
# Package the YAML files with default model parameters
hivpy.data = *.yaml

[options.extras_require]
dev =
    pytest
    pytest-mock
    flake8
    isort
    sphinx

[options.entry_points]
console_scripts =
    run_model = hivpy.cli:run_model

[flake8]
max-line-length = 120
per-file-ignores =
    # Don't complain about unused imports in __init__.py
    */__init__.py: F401
    # Ignore max line length as some column names and descriptions are very long
    */column_names.py: E501
